test/sematest/invalid/invalid_expression_in_if.java
class A {
}

class B {
    public static void main(String[] args) {
        A x = new A();
        if (x) {
            System.out.println(1337);
        }
    }
}
